// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBarPopup renders the UI snapshots correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-filterBarPopup"
  id="defaultFilterBarNoButtons"
>
  <button
    className="chakra-button css-1llumfr"
    data-testid="ds-button"
    id="defaultFilterBarNoButtons-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-filterBarPopup"
  id="filterBarWithClearAllButton"
>
  <button
    className="chakra-button css-1llumfr"
    data-testid="ds-button"
    id="filterBarWithClearAllButton-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-filterBarPopup"
  id="filterBarWithSubmitAllButton"
>
  <button
    className="chakra-button css-1llumfr"
    data-testid="ds-button"
    id="filterBarWithSubmitAllButton-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;

exports[`FilterBarPopup renders the UI snapshots correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-filterBarPopup"
  id="filterBarWithButtons"
>
  <button
    className="chakra-button css-1llumfr"
    data-testid="ds-button"
    id="filterBarWithButtons-show-filters"
    onClick={[Function]}
    type="button"
  >
    Show filters
  </button>
</div>
`;
